welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:10: error: ';' expected but 'else' found.
}else{
 ^sleepIn:17: error: Unmatched closing brace '}' ignored here
 }
 ^