welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if(vacation=true){
		
	sleepln==false}

else
	
	if (weekday=true){
		sleepln==false}
}else{
		sleepln==true
		
	}
	
}
